--- a/assets/css/graphstyle.css
+++ b/assets/css/graphstyle.css
@@ -1,13 +1,13 @@
 .link{
   fill:none;
-  stroke:#222;
+  stroke:#999;
   stroke-opacity:0.6;
   stroke-width:1px;
 }
 
 . node{
-  stroke:#123;
-  fill:#123;
+  stroke:#456;
+  fill:#ddd;
   stroke-width:200px;
 }
 
@@ -18,7 +18,7 @@ marker{
 
 .node-text{
   font:11px sans-serif;
-  fill:red;
+  fill:black;
 }
 
 .link-text{
