--- a/assets/css/graphstyle.css
+++ b/assets/css/graphstyle.css
@@ -1,6 +1,11 @@
+.maincontainer{
+  padding-top:10px;
+  padding-right:0;
+  padding-bottom:0;
+  padding-left:10px;
+}
+
 marker{
-  stroke:#999;
-  fill:rgba(124,240,10,0);
 }
 
 .node-text{
@@ -14,8 +19,9 @@ marker{
 }
 
 svg{
-  height:76vh;
-  border:3px solid rgb(78,45,207);
+  height:70vh;
+  border:1px solid #cccccc;
+  width:100%;
 }
 
 .node_deleted{
